--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset='utf-8'>
+<meta http-equiv='x-ua-compatible' content='IE=edge'>
+<title>MLC's Store</title>
+<meta name= 'viewport' content= 'width=device-width, initial-scale=1'>
+<link rel='stylesheet' type= 'text/css' media='screen' href='style.css'>
+<script src='main.js'></script>
+</head>
+<body>
+    <header>
+    <img id= "MLC'sStore" src= "MLC's Store (1).png" alt="MLC'sStore"> 
+    </header>
+    <main>
+<h1><i><b>MLC's Store👟</b></i></h1>
+<div class= "primeiroparagrafo">
+         <h3>Inicio</h3>
+      <p>Sejam bem-vindos a MLC's A loja das maiores variedades de tênis Vans que você já viu
+Localizada ao lado de um dos pontos turísticos de nossa querida cidade,a MLC's tem como objetivo.</p>
+      <ulid="lista">
+      <li>"oferecer uma boa aparência dos pés à cabeça"
+O projeto da loja iniciou-se em um momento muito caótico nas nossas vidas, durante a pandemia, tivemos a ideia de ter nosso próprio negócio,nosso grupo de amigas,Contente, Lara e Maria, as três o sonho de sermos sócias e abrir uma loja.</li>    
+      <li>Lara foi uma das pessoas mais essenciais para o nosso primeiro passo, ela que depositou os primeiros investimentos ,mas antes dos investimentos Siri oficiais contente teve como o ato de aconselhar tanto financeiramente quanto emocionalmente e Maria também teve um papel importante, ela foi responsável pelo marketing e o design.</li>
+      </ul>
+      </div>
+      <div class= "segundoparagrafo">
+      <h3><b>LOCALIZAÇAO</b></h3>
+      <p>Localizado no centro de <b> Maringá - PR </b> bem pertinho do nosso lindoponto turristico catedral.</p>
+      </div>
+<h1><i><b>MLC's Store👟</b></i></h1>
+</main>
+<footer><p><img id= "MLC'sStore" src="MLC's Store (1).png" alt="MLC'sStore"></p>
+</footer>
+</body>
+</html>
