--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ O projeto da loja iniciou-se em um momento muito caótico nas nossas vidas, dura
       </div>
 <h1><i><b>MLC's Store👟</b></i></h1>
 </main>
-<footer><p><img id= "MLC'sStore" src="MLC's Store (1).png" alt="MLC'sStore"></p>
+<footer><p><img id= "MLC'sStore0" src="MLC's Store (1).png" alt="MLC'sStore0"></p>
 </footer>
 </body>
 </html>
