--- a/index.html
+++ b/index.html
@@ -20,8 +20,15 @@
 Localizada ao lado de um dos pontos turísticos de nossa querida cidade,a MLC's tem como objetivo.</p>
       <ulid="lista">
       <li>"oferecer uma boa aparência dos pés à cabeça"
-O projeto da loja iniciou-se em um momento muito caótico nas nossas vidas, durante a pandemia, tivemos a ideia de ter nosso próprio negócio,nosso grupo de amigas,Contente, Lara e Maria, as três o sonho de sermos sócias e abrir uma loja.</li>    
-      <li>Lara foi uma das pessoas mais essenciais para o nosso primeiro passo, ela que depositou os primeiros investimentos ,mas antes dos investimentos Siri oficiais contente teve como o ato de aconselhar tanto financeiramente quanto emocionalmente e Maria também teve um papel importante, ela foi responsável pelo marketing e o design.</li>
+            O projeto da loja iniciou-se em um momento muito caótico nas 
+             nossas vidas, durante a pandemia, tivemos a ideia de ter nosso 
+             próprio negócio,nosso grupo de amigas,Contente, Lara e Maria, as
+              três o sonho de sermos sócias e abrir uma loja.</li>    
+      <li>Lara foi uma das pessoas mais essenciais para o nosso primeiro passo,
+             ela que depositou os primeiros investimentos ,mas antes dos investimentos 
+             Siri oficiais contente teve como o ato de aconselhar tanto financeiramente quanto
+             emocionalmente e Maria também teve um papel importante, ela foi responsável pelo 
+             marketing e o design.</li>
       </ul>
       </div>
       <div class= "segundoparagrafo">
