--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-    <img id= "MLC'sStore" src= "MLC's Store (1).png" alt="MLC'sStore"> 
+    <img id= "MLC'sStore" src= "MLC's Store (2).png" alt="MLC'sStore"> 
     </header>
     <main>
 <h1><i><b>MLC's Store👟</b></i></h1>
@@ -20,7 +20,7 @@
 Localizada ao lado de um dos pontos turísticos de nossa querida cidade,a MLC's tem como objetivo.</p>
       <ulid="lista">
       <li>"oferecer uma boa aparência dos pés à cabeça"
-            O projeto da loja iniciou-se em um momento muito caótico nas 
+            <li>O projeto da loja iniciou-se em um momento muito caótico nas</li>
              nossas vidas, durante a pandemia, tivemos a ideia de ter nosso 
              próprio negócio,nosso grupo de amigas,Contente, Lara e Maria, as
               três o sonho de sermos sócias e abrir uma loja.</li>    
@@ -37,7 +37,7 @@ Localizada ao lado de um dos pontos turísticos de nossa querida cidade,a MLC's 
       </div>
 <h1><i><b>MLC's Store👟</b></i></h1>
 </main>
-<footer><p><img id= "MLC'sStore0" src="MLC's Store (1).png" alt="MLC'sStore0"></p>
+<footer><p><img id= "MLC'sStore0" src="MLC's Store (2).png" alt="MLC'sStore0"></p>
 </footer>
 </body>
 </html>
