--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Localizada ao lado de um dos pontos turísticos de nossa querida cidade,a MLC's 
       </div>
 <h1><i><b>MLC's Store👟</b></i></h1>
 </main>
-<footer><p><img id= "MLC'sStore0" src="MLC's Store (2).png" alt="MLC'sStore0"></p>
+<footer><p><img id= "MLC" src="MLC's Store (2).png" alt="MLC'sStore0"></p>
 </footer>
 </body>
 </html>
