--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-    <img id= "MLC'sStore" src= "MLC's Store (2).png" alt="MLC'sStore"> 
+    <img id= "MLC" src= "MLC's Store (2).png" alt="MLC'sStore"> 
     </header>
     <main>
 <h1><i><b>MLC's Store👟</b></i></h1>
