--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Localizada ao lado de um dos pontos turísticos de nossa querida cidade,a MLC's 
       </div>
       <div class= "segundoparagrafo">
       <h3><b>LOCALIZAÇAO</b></h3>
-      <p>Localizado no centro de <b> Maringá - PR </b> bem pertinho do nosso lindoponto turristico catedral.</p>
+      <p>Localizado no centro de <b> Maringá - PR. </b> bem pertinho do nosso lindoponto turristico catedral.</p>
       </div>
 <h1><i><b>MLC's Store👟</b></i></h1>
 </main>
