--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 <body>
     <header>
     <img id= "MLC" src= "MLC's Store (2).png" alt="MLC'sStore"> 
+    <nav>
+      <ul id="lista01">
+          <li><a target="_blank" href="index.html">Home<li>
+          <li><a target="_blank" href="https://www.vans.com.br">VANS</li>
+          <li><a taeget="_blank" href="https://www.instagram.com">vans</li>
+    </nav>
     </header>
     <main>
 <h1><i><b>MLC's Store👟</b></i></h1>
