--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <img id= "MLC" src= "MLC's Store (2).png" alt="MLC'sStore"> 
     <nav>
       <ul id="lista01">
-          <li><a target="_blank" href="index.html">Home<li>
+          <li><a target="_blank" href="index.html">Home</li>
           <li><a target="_blank" href="https://www.vans.com.br">VANS</li>
           <li><a taeget="_blank" href="https://www.instagram.com">vans</li>
     </nav>
