--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <ul id="lista01">
           <li><a target="_blank" href="index.html">Home</li>
           <li><a target="_blank" href="https://www.vans.com.br">VANS</li>
-          <li><a taeget="_blank" href="https://www.instagram.com">vans</li>
+          <li><a taeget="_blank" href="https://www.instagram.com">vans</li><a>
     </nav>
     </header>
     <main>
